--- a/article.html
+++ b/article.html
@@ -29,100 +29,58 @@
             <a href="#" class="item">亲亲我</a>
         </div>
     </div>
-    <div class="main">
-        <div class="article-list">
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
+    <div class="main">  
+        <div class="article">
+            <h1 class="title">
+                lalala
+            </h1>
+            <div class="status">
+                发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+            </div>
+            <div class="content">
+               <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
+                <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
+                <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
+                <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
+                <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
+                <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+                <div>
+                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
+                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
+                    it. Your parents are gonna do it.
                 </div>
-                <div class="content">
+                <div>
                     Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
                     to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
                     it. Your parents are gonna do it.
                 </div>
             </div>
         </div>
+        
     </div>
 </body>
 
