--- a/index.html
+++ b/index.html
@@ -1,129 +1,119 @@
 <!DOCTYPE html>
 <html lang="zh-CH">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+    <title>betterMan</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <title>大大及</title>
-</head>
-
-<body>
+  <body>
     <div class="side-bar">
-        <div class="header">
-            <a href="index.html" class="logo">大大及</a>
-            <div class="intro">
-                hahahahahhhhh
-            </div>
-        </div>
-        <div class="nav">
-            <a href="#" class="item">关于我</a>
-            <a href="#" class="item">联系我</a>
-            <a href="#" class="item">捐助我</a>
-        </div>
-        <div class="tag-list">
-            <a href="#" class="item">夸夸我</a>
-            <a href="#" class="item">抱抱我</a>
-            <a href="#" class="item">亲亲我</a>
-        </div>
+      <div class="header">
+        <a href="index.html" class="logo">大大及</a>
+        <div class="intro">This is a blog for fun</div>
+      </div>
+      <div class="nav">
+        <a href="#" class="item">关于我</a> <a href="#" class="item">联系我</a>
+        <a href="#" class="item">捐助我</a>
+      </div>
+      <div class="tag-list">
+        <a href="#" class="item">夸夸我</a> <a href="#" class="item">抱抱我</a>
+        <a href="#" class="item">亲亲我</a>
+      </div>
     </div>
     <div class="main">
-        <div class="article-list">
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
-            <div class="item">
-                <a href="article.html" class="title">
-                    lalala
-                </a>
-                <div class="status">
-                    发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
-                </div>
-                <div class="content">
-                    Rick: Listen, Morty, I hate to break it to you, but what people call “love” is just a chemical reaction that compels animals
-                    to breed. It hits hard, Morty, then it slowly fades, leaving you stranded in a failing marriage. I did
-                    it. Your parents are gonna do it.
-                </div>
-            </div>
+      <div class="article-list">
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
         </div>
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
+        </div>
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
+        </div>
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
+        </div>
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
+        </div>
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
+        </div>
+        <div class="item">
+          <a href="article.html" class="title"> lalala </a>
+          <div class="status">
+            发布于： 2050-10-01 | 阅读：2亿 | 标签：#两性 #HTML
+          </div>
+          <div class="content">
+            Rick: Listen, Morty, I hate to break it to you, but what people call
+            “love” is just a chemical reaction that compels animals to breed. It
+            hits hard, Morty, then it slowly fades, leaving you stranded in a
+            failing marriage. I did it. Your parents are gonna do it.
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
